# crazyflie-firmware

./: .gitignore  CMakeLists.txt  CMakeLists_c.txt  STANDALONE_IMPLEMENTATION.md  build_tests.sh  build_tests_c.sh
docs/: index.md
examples/: standalone_example.cpp
examples/app_oot_estimator/: Makefile  app_oot_estimator.c
examples/app_uart/: app-config
examples/app_uart/src/: uart.c
examples_c/: standalone_example.c
src/modules/src/: crtp_commander_generic.c
tests/: README.md  cf_assert_handler.cpp  main.cpp  test_controller_mellinger.cpp  test_controller_mellinger.h  test_controller_pid.cpp  test_controller_pid.h  test_kalman_core.cpp  test_kalman_core.h  test_math3d.cpp  test_math3d.h  test_planner.cpp  test_planner.h  test_power_distribution.cpp  test_power_distribution.h  test_pptraj.cpp  test_pptraj.h
tests_c/: README.md  cf_assert_handler.c  main.c  test_controller_mellinger.c  test_controller_pid.c  test_kalman_core.c  test_math3d.c  test_planner.c  test_power_distribution.c  test_pptraj.c
